issue with send to jamovi multiple

--- a/jamovi/brawsim.a.yaml
+++ b/jamovi/brawsim.a.yaml
@@ -1512,12 +1512,12 @@ options:
     - name: sendMultiple
       title: multiple
       type: Output
-      default: TRUE
+      default: FALSE
       
     - name: sendExplore
       title: explore
       type: Output
-      default: TRUE
+      default: FALSE
 
     - name: brawHelp
       title: Main help
